<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        android:id="@+id/suggest_mobile_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:textColor="@color/black"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_suggest"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" >
    </TextView>

    <EditText
        android:id="@+id/suggest_content_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/leave_idea"
        android:minLines="6"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_email"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" >
    </TextView>

    <EditText
        android:id="@+id/suggest_contact_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:gravity="top"
        android:hint="@string/leave_contact"
        android:minLines="2"
        android:textSize="14sp" />

    <Button
        android:id="@+id/suggest_send_btn"
        android:layout_width="244dip"
        android:layout_height="48dip"
        android:background="@drawable/selector_btnbg"
        android:paddingBottom="7dip"
        android:paddingLeft="60dip"
        android:paddingRight="60dip"
        android:paddingTop="7dip"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>