<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/PCBuy_pleaseOpenWeb"
        android:textSize="@dimen/title_16" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/PCBuy_ip"
        android:textColor="@color/blue"
        android:textSize="@dimen/title_16" >
    </TextView>

    <Button
        android:id="@+id/enableOpenWeb"
        android:layout_width="wrap_content"
        android:paddingLeft="@dimen/size32"
        android:paddingRight="@dimen/size32"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@drawable/selector_btnbg" />

</LinearLayout>